<resources>
    <string name="app_name">Bet Mwitu</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_account">My account</string>
    <string name="action_refresh">Refresh</string>

    <string name="how_to_top_up"><b>How to top-up:\n</b>Send a minimum of KES 50 to our till Number: <b>560921</b>. Your account will be credited and you\'ll get a receipt on email.</string>

    <string name="username">Username:\t\t\t</string>
    <string name="phonenumber">Phone number:\t</string>
    <string name="accountbalance">Account balance:\t</string>
    <string name="not_yet_implemented">not yet implemented</string>
    <string name="till_number">123456</string>
    <string name="action_logout">logout</string>
    <string name="action_about">about Us</string>

    <string name="copy_right">Copyrights © %1$d</string>

    <string name="payment">Payment</string>

    <!-- AdMob ad unit IDs -->
    <string name="admob_app_id">ca-app-pub-5648358941873724~2428659354</string>
    <string name="banner_home_footer">ca-app-pub-5648358941873724/1279406824</string>
    <string name="interstitial_full_screen">ca-app-pub-5648358941873724/9937282589</string>
    <string name="rewarded_video">ca-app-pub-XXXXXXXX~XXXXXXXXXXX</string>

    <string name="test_banner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="test_ineterstitial">ca-app-pub-3940256099942544/1033173712</string>


    <string name="facebook_app_id">383967495515802</string>
    <string name="fb_login_protocol_scheme">fb383967495515802</string>



</resources>
