<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">


    <item
        android:id="@+id/action_account"
        android:icon="@mipmap/ic_account_card_details"
        android:orderInCategory="100"
        android:title="@string/action_account"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@mipmap/ic_refresh"
    android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />

</menu>
