<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".AccountActivity"
    android:background="@drawable/list_row_selector">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner_background"
        android:id="@+id/profile_card"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/usernameLayout">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/thumbnail"
            android:layout_toRightOf="@+id/thumbnail"
            android:textSize="@dimen/home_away"
            android:text="@string/username"/>

        <TextView
            android:id="@+id/usernameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/thumbnail"
            android:layout_toRightOf="@+id/thumbnail"
            android:textSize="@dimen/home_away"
            android:textStyle="bold"
            android:text="Moses Mwongela"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/phoneNumberLayout">

            <TextView
                android:id="@+id/phonenumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/thumbnail"
                android:layout_toRightOf="@+id/thumbnail"
                android:textSize="@dimen/home_away"
                android:text="@string/phonenumber"/>

            <TextView
                android:id="@+id/phonenumberTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/thumbnail"
                android:layout_toRightOf="@+id/thumbnail"
                android:textSize="@dimen/home_away"
                android:textStyle="bold"
                android:text="0724784992"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/accountBalanceLayout">

            <TextView
                android:id="@+id/accountbalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/thumbnail"
                android:layout_toRightOf="@+id/thumbnail"
                android:textSize="@dimen/home_away"
                android:text="@string/accountbalance"/>

            <TextView
                android:id="@+id/accountbalanceTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/thumbnail"
                android:layout_toRightOf="@+id/thumbnail"
                android:textSize="@dimen/home_away"
                android:textStyle="bold"
                android:text="ksh 500"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner_background"
        android:id="@+id/go_to_mpesa_card"
        android:orientation="vertical"
        android:layout_below="@+id/profile_card"
        android:padding="5dp"
        android:layout_marginTop="8dp">

        <TextView
            android:id="@+id/instruction1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/thumbnail"
            android:layout_toRightOf="@+id/thumbnail"
            android:textSize="@dimen/home_away"
            android:text="@string/how_to_top_up"/>

        <Button
            android:id="@+id/btnTopUpNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/home_away"
            android:layout_margin="4dp"
            android:text="Top up now"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner_background"
        android:id="@+id/top_up_card"
        android:orientation="vertical"
        android:layout_below="@+id/go_to_mpesa_card"
        android:padding="5dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/etTransCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_top_bg"
            android:inputType="textCapCharacters"
            android:maxLines="1"
            android:textSize="@dimen/home_away"
            android:hint="M-Pesa transaction code"
            android:textColorHint="#bbbbbb"
            android:drawableLeft="@mipmap/ic_cash"/>

        <Button
            android:id="@+id/btnSubmitTransCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/home_away"
            android:layout_margin="4dp"
            android:text="Send Transaction Code"
            />

    </LinearLayout>


    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:divider="@color/list_divider"
        android:dividerHeight="1dp"
        android:listSelector="@drawable/list_row_selector"
        android:layout_below="@+id/top_up_card" />

</RelativeLayout>